src/components/Navbar.css
.nav {
  --nav-border: var(--bg-secondary);

  position: sticky;
  top: 0;
  z-index: 100;
  padding: clamp(1rem, 0.829rem + 0.536vw, var(--space-md)) 0;
  background-color: var(--bg-primary);
  box-shadow: 0 2px 4px 0 oklch(from var(--nav-border) calc(l - 0.05) c h);
}

.nav__inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav__logo {
  font-family: var(--font-display);
  font-size: var(--text-xl);
  font-weight: 600;
  color: var(--text-display);
  text-decoration: none;
}

.nav__list {
  display: flex;
  gap: clamp(var(--space-md), 0.143rem + 2.679vw, var(--space-xxl));
  justify-content: center;
}

.nav__item--mobile {
  display: none;
}

.nav__link {
  --_color: var(--link-color, var(--text-display));
  --_decoration: var(--link-decoration, transparent);
  --_weight: var(--link-weight, 400);

  display: flex;
  gap: var(--space-xs);
  align-items: center;
  font-size: var(--text-base);
  font-weight: var(--_weight);
  color: var(--_color);
  letter-spacing: 0.5px;
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-decoration-color: var(--_decoration);
  text-underline-offset: 5px;
  transition:
    color 0.3s ease,
    text-decoration-color 0.3s ease,
    font-weight 0.3s ease;
}

.nav__icon {
  display: none;
}

.nav__link:hover {
  --link-color: var(--palette-ink-700);
  --link-decoration: var(--text-hover);
}

.nav__link--active {
  --link-weight: 500;
  --link-decoration: var(--text-display);
}

@media (max-width: 768px) {
  .nav__item--mobile {
    display: block;
  }

  .nav__list {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 100;
    justify-content: space-evenly;
    width: 100%;
    padding: var(--space-sm) 0
      calc(var(--space-sm) + env(safe-area-inset-bottom)) 0;
    background-color: var(--bg-primary);
    border-top: 1px solid var(--border-subtle);
    box-shadow: 0px -4px 10px -5px rgba(0, 0, 0, 0.1);
  }

  .nav__link {
    --link-color: var(--text-body);

    flex-direction: column;
    font-size: var(--text-sm);
    text-decoration: none;
  }

  .nav__icon {
    display: block;
  }

  .nav__link:hover,
  .nav__link--active {
    --link-decoration: transparent;
    --link-color: var(--palette-sky-500);
  }
}

